# Playing-with-OpenCV

randomShape/: CMakeLists.txt  draw.cpp  draw.hpp  main.cpp  shapes.cpp  shapes.hpp
